# mai_oop_2

./: LINTING.md  README.md  lint_all.bat
lab_2/: CMakeLists.txt
lab_2/include/: array.hpp  binary.hpp
lab_2/src/: array.cpp  binary.cpp  main.cpp
lab_2/tests/: test_binary.cpp
